<resources>
    <string name="app_name">BookSmartApp</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="Register">Regístrate</string>
    <string name="txtLogin">Ingresa los siguientes datos</string>
    <string name="btnRegister">Registrarse</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="formName">Nombre(s)</string>
    <string name="formFLastName">Apellido</string>
    <string name="formNumber">Celular</string>
    <string name="formEmail">Correo electrónico</string>
    <string name="formGender">Género</string>
    <string name="formPass">Contraseña</string>
    <string name="formConf">Confirmar contraseña</string>
    <string name="btnConf">Confirmar</string>
    <string name="welcome">¡Siempre es bueno tenerte de \n vuelta!</string>
    <string name="regConf">Confirma tu correo \n electrónico</string>
    <string name="codeConf">Ingresa el código que enviamos a tu correo</string>
    <string name="validate">Validar código</string>
    <string name="mssg1">¡Cuenta creada \n con éxito!</string>
    <string name="title1">Regístrate en una Biblioteca</string>
    <string name="instructions1">Para hacer uso del servicio debes estar \n registrado en una de las bibliotecas \n afiliadas
</string>

    <string name="bibliotecas">Bibliotecas en las \n que estás registrado</string>
    <string name="select_biblioteca">Selecciona la biblioteca que deseas consultar</string>
    <string name="no_bibliotecas">Bibliotecas sin disponibilidad</string>

    <!--Home-->
    <string name="welcome_settings">Hola, bienvenido de vuelta</string>
    <string name="prestamos">Tus préstamos</string>
    <string name="no_prestamo">Por el momento no \ncuentas con ningún \npréstamo</string>

    <!--Prestamos-->
    <string name="detalle_title">Detalles de tu \npréstamo</string>
    <string name="date1">Fecha de préstamo</string>
    <string name="date2">Fecha de entrega</string>
    <string name="desc">Descripción</string>
    <string name="editorial">Editorial</string>

    <!--Datos usuario -->
    <string name="nameData">Nombre:</string>
    <string name="lastnameData">Apellido:</string>
    <string name="emailData">Correo:</string>
    <string name="numberData">Número:</string>
    <string name="genderData">Género:</string>
    <string name="messageSettings">Para cambiar cualquiera de los datos anteriores por favor visita \nuna biblioteca</string>

    <!--Cambiar contra-->
    <string name="changePass">Cambiar contraseña</string>
    <string name="newPass">Nueva Contraseña</string>
    <string name="confPass">Confirmar nueva contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Search -->
    <string name="searchSubtitle">Ingresa el nombre del libro que te interese</string>
    <string name="findBook">¡Encuentra tu libro favorito!</string>
    <string name="notFound">No se ha encontrado ningún libro con ese nombre</string>
    <string name="disponible">Disponible</string>
    <string name="noDisponible">En préstamo</string>
    
    <!--errores-->
    <string name="formError1">Campo requerido, no puede ir vacío</string>

    <!--arrays-->
    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>