<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity"
    android:background="@color/white">

    <TextView
    android:id="@+id/txtreg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:fontFamily="@font/league_spartan_semibold"
    android:textSize="28dp"
    android:textColor="@color/Borders"
    android:text="@string/Register"/>
    <TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtreg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/league_spartan_semibold"
        android:textSize="22dp"
        android:textColor="@color/Btn2"
        android:text="@string/txtLogin"/>

    <LinearLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtData"
        android:layout_alignStart="@id/txtData"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:textSize="18dp"
                android:text="@string/formName" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:textSize="18dp"
                android:text="@string/formFLastName" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:textSize="18dp"
                android:text="@string/formMLastName" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:textSize="18dp"
                android:text="@string/formEmail" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:textSize="18dp"
                android:text="@string/formPass" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:textSize="18dp"
                android:text="@string/formConf" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_shape"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/fieldsContainer"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape_3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/btnConf"
        android:fontFamily="@font/league_spartan_semibold"
        />

</RelativeLayout>