<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.VerifyActivity">


    <TextView
        android:id="@+id/txtConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/league_spartan_medium"
        android:textSize="36dp"
        android:textColor="@color/Borders"
        android:text="@string/regConf"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConf"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/league_spartan"
        android:textSize="18dp"
        android:textColor="@color/Btn2"
        android:text="@string/codeConf"/>

    <LinearLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcome"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/edit_text_shape"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@id/fieldsContainer"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/Btn2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/validate"
        android:fontFamily="@font/league_spartan_semibold"
        />
</RelativeLayout>