<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select.SelectLibraryActivity"
    android:background="@color/Background">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/league_spartan_medium"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="@color/Borders"
        android:text="@string/bibliotecas" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bibliotecasCard"
        android:layout_below="@id/title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="6dp"
        app:cardBackgroundColor="@color/CardBackground"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/select_biblioteca"
                android:fontFamily="@font/league_spartan"
                android:textColor="@color/Borders"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/no_bibliotecas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_bibliotecas"
                android:gravity="center"
                android:fontFamily="@font/league_spartan_medium"
                android:textSize="40sp"
                android:textColor="@color/Borders"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bibliotecasRecyclerSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="200dp"
        android:enabled="false"
        android:layout_marginTop="30dp"
        app:cornerRadius="5dp"
        app:backgroundTint="@color/PopUps"
        android:layout_below="@id/bibliotecasCard"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/league_spartan_semibold"
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="Cerrar sesión"
        android:layout_height="50dp"/>


</RelativeLayout>